--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "express": "~4.18.1",
+    "mongoose": "^8.3.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tslib": "^2.3.0"
