--- a/apps/backend/src/.env
+++ b/apps/backend/src/.env
@@ -1,1 +1,2 @@
-ATLAS_URI= "mongodb+srv://user:user@cluster0.fibcxnv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL= "mongodb+srv://user:user@cluster0.fibcxnv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+PORT=3000
