--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.17",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -12,6 +14,7 @@
     "mongoose": "^8.3.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^6.23.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
