--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
     "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "~4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
